[tool.poetry]
name = "puppetmaster"
version = "0.1.0"
description = "Controlling daemons via Python"
authors = ["wilypomegranate <wilypomegranate@users.noreply.github.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "^18.3-alpha.0"

[tool.black]
line-length = 79
py36 = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
